src/test/compile-fail/import-loop.rs
// error-pattern:import

use y::x;

mod y {
    import x;
    export x;
}

fn main() { }
